--- a/agent_motion_prediction/CNN Motion-Experiments/tensorflow/Dockerfile
+++ b/agent_motion_prediction/CNN Motion-Experiments/tensorflow/Dockerfile
@@ -1,6 +1,5 @@
 FROM tensorflow/tensorflow
 ADD . .
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 RUN pip3 install -r tf_requirments.txt
 ENV PYTHONUNBUFFERED=1
-CMD [ "python", "./train.py"]
-
